--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "github-integration",
   "version": "0.1.0",
-  "homepage": "https://yguler.github.io/bayzat-hiring-frontend-YavuzGuler",
+  "homepage": "https://YavuzGuler.github.io/githup-integration",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
